syntax = "proto3";

package services.livemapper;
option go_package = "github.com/galexrt/fivenet/gen/go/proto/services/livemapper;livemapper";

import "resources/users/jobs.proto";
import "resources/livemap/livemap.proto";

message StreamRequest {}

message StreamResponse {
  repeated resources.users.Job jobs_dispatches = 1;
  repeated resources.users.Job jobs_users = 2;
  repeated resources.livemap.UserMarker users = 3;
  repeated resources.livemap.DispatchMarker dispatches = 4;
}

service LivemapperService {
  // @perm: Attrs=Dispatches/JobList:"config.Game.Livemap.Jobs"|Players/JobGradeList
  rpc Stream(StreamRequest) returns (stream StreamResponse);
}
